thinsensors few updates

--- a/CLICdp_definitions.sty
+++ b/CLICdp_definitions.sty
@@ -93,6 +93,7 @@
 \newcommand{\mv}{\ensuremath{\mathrm{\,m\kern -0.1em V}}\xspace}
 \newcommand{\picocoulomb}{\ensuremath{\mathrm{\,p\kern -0.01em C}}\xspace}
 \newcommand{\inversecmsquaredsec}{\ensuremath{\text{cm}^{-2}\text{s}^{-1}}\xspace}
+\newcommand{\inversemetercubic}{\ensuremath{\text{m}^{-3}}\xspace}
 
 %% text shortcuts
 \newcommand{\eg}{e.g.\xspace}
